Bringing in BugSnag! :D

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 	<head>
 		<!-- Initialize Setup -->
+		<script src="https://d2wy8f7a9ursnm.cloudfront.net/bugsnag-1.0.4.min.js" data-apikey="118a95693d25afbeca2229b4507acafc"></script>
 		<script type="text/javascript" src="js/setup.js"></script>
 
 		<title>Bad Ass New Tab Page</title>
