Pulling functionality out of background into script

--- a/background.html
+++ b/background.html
@@ -4,16 +4,9 @@
 		<title>Bad Ass New Tab Page</title>
 
 		<!-- Now let's bring in all the awesomeness -->
-		<script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
-		<script type="text/javascript" src="js/underscore-min.js"></script>
-		<script type="text/javascript" src="js/backbone-min.js"></script>
-		<script type="text/javascript" src="js/handlebars.js"></script>
-		<script type="text/javascript" src="js/less-1.3.3.min.js"></script>
-		<script type="text/javascript" src="js/bootstrap.min.js"></script>
+		<script type="text/javascript" src="lib/jquery-1.9.1.min.js"></script>
+		<script type="text/javascript" src="lib/underscore-min.js"></script>
+		<script type="text/javascript" src="js/background.js"></script>
 	</head>
-	<body>
-
-
-
-	</body>
+	<body></body>
 </html>
