Loading config into separate json file

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 		<script type="text/javascript" src="lib/bootstrap.min.js"></script>
 
 		<script type="text/javascript" src="js/templates.js"></script>
+		<script type="text/javascript" src="js/bantp_config.js"></script>
 		<script type="text/javascript" src="js/application.js"></script>
 		<script type="text/javascript" src="js/bantp.js"></script>
 		<script type="text/javascript" src="js/settings.js"></script>
@@ -34,7 +35,7 @@
 		<link rel="shortcut icon" href="img/favicon.ico" />
 
 		<!-- Initialize Teardown -->
-		<script type="text/javascript" src="js/teardown.js"></script>
+		<script type="text/javascript" src="js/init.js"></script>
 	</head>
 	<body>
 
