Bringing bugsnag and config to background page

--- a/background.html
+++ b/background.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<script src="https://d2wy8f7a9ursnm.cloudfront.net/bugsnag-1.0.4.min.js" data-apikey="118a95693d25afbeca2229b4507acafc"></script>
+		<script type="text/javascript" src="js/setup.js"></script>
 		<script type="text/javascript" src="lib/underscore-min.js"></script>
+		<script type="text/javascript" src="js/bantp_config.js"></script>
 		<script type="text/javascript" src="js/background.js"></script>
 	</head>
 	<body></body>
