Added helpers for more easily testing functionality

--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
 					<img src="img/icon_48.png" alt="Bad Ass New Tab Page" title="Bad Ass New Tab Page" />
 
 					<br /><br />
+					<p>Helpers</p>
+					<a href="#" data-helper="logStorage" data-title="Log Storage" data-content="Log all local and synced storage into the console window."><i class="icon-cloud-download"></i></a>
+					<a href="#" data-helper="processInstall" data-title="Process Install" data-content="Run the processInstall() function without actually having to install anything! :D"><i class="icon-off"></i></a>
 
 					<p>MODULES</p>
 
