--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 					<p>Helpers</p>
 					<a href="#" data-helper="logStorage" data-title="Log Storage" data-content="Log all local and synced storage into the console window."><i class="icon-cloud-download"></i></a>
 					<a href="#" data-helper="processInstall" data-title="Process Install" data-content="Run the processInstall() function without actually having to install anything! :D"><i class="icon-off"></i></a>
+					<a href="#" data-helper="destroyStorage" data-title="Destroy Storage" data-content="Destroy local and synced storage and get a clean slate"><i class="icon-bolt"></i></a>
 
 					<p>MODULES</p>
 
@@ -70,6 +71,7 @@
 						<div class="module">
 							<p>QUICK LAUNCH</p>
 							
+							<div id="quick_launch_target"></div>
 
 							<div class="clearfix"></div>
 						</div>
