--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 					<a href="#" data-helper="logStorage" data-title="Log Storage" data-content="Log all local and synced storage into the console window."><i class="icon-cloud-download"></i></a>
 					<a href="#" data-helper="processInstall" data-title="Process Install" data-content="Run the processInstall() function without actually having to install anything! :D"><i class="icon-off"></i></a>
 					<a href="#" data-helper="destroyStorage" data-title="Destroy Storage" data-content="Destroy local and synced storage and get a clean slate"><i class="icon-bolt"></i></a>
+					<a href="#" data-helper="hardReset" data-title="Hard Reset" data-content="Think of this as a high-yield thermonuclear weapon for this extension. Use carefully..."><i class="icon-warning-sign"></i></a>
 
 					<p>MODULES</p>
 
