--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
 		<script type="text/javascript" src="js/templates.js"></script>
 		<script type="text/javascript" src="js/bantp_config.js"></script>
+		<script type="text/javascript" src="js/linkManager.js"></script>
 		<script type="text/javascript" src="js/application.js"></script>
 		<script type="text/javascript" src="js/bantp.js"></script>
 		<script type="text/javascript" src="js/settings.js"></script>
